fix footer socials

--- a/src/index.html
+++ b/src/index.html
@@ -304,10 +304,10 @@
           <!-- icons -->
           <ul class="footer__list footer__list--socials">
             <li class="footer__list__item">
-              <a href="https://www.facebook.com/witch.of.mountain.winds" class="icon icon--facebook"></a>
+              <a href="https://www.facebook.com/namu.museum/" class="icon icon--facebook"></a>
             </li>
             <li class="footer__list__item">
-              <a href="https://www.instagram.com/witch_of_mountain_winds/" class="icon icon--instagram"></a>
+              <a href="https://www.instagram.com/namu.museum/" class="icon icon--instagram"></a>
             </li>
           </ul>
 
