add minor fixes #2

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ua" class="page">
+<html lang="uk" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -269,6 +269,7 @@
             type="email"
             class="form__input"
             placeholder="E-mail"
+            autocomplete="off"
             required
           >
 
@@ -276,7 +277,6 @@
                 type="submit"
                 value="&#10095;"
                 class="button form__button"
-                autocomplete="off"
               >
         </form>
       </section>
@@ -366,11 +366,11 @@
               вул. М. Грушевського, 6; Київ, 01001
             </a>
 
-            <a href="tel:+38 (044) 278-13-57" class="footer__contacts-item">
+            <a href="tel:+380442781357" class="footer__contacts-item">
               тел. +38 (044) 278-13-57
             </a>
 
-            <a href="tel:+38 (044) 278-74-54" class="footer__contacts-item">
+            <a href="tel:+380442787454" class="footer__contacts-item">
                факс +38 (044) 278-74-54
             </a>
 
