--- a/src/index.html
+++ b/src/index.html
@@ -255,34 +255,36 @@
           <!-- #endregion -->
           <!-- #region subscribe -->
           <section class="subscribe" id="about">
-            <h1 class="header-2 subscribe__header">Підписка</h1>
-            <h4 class="header-4 subscribe__header">Бути в курсі всіх актуальних подій та останніх новин.</h4>
-            <div class="subscribe__form">
-              <form onsubmit="this.reset(); return false;" class="subscribe__input">
-                <input
-                  required
-                  type="email"
-                  class="
-                    subscribe__input__field
-                    subscribe__input__field--type--email
-                  "
-                  placeholder="E-mail"
-                  autocomplete="email"
-                  id="email"
-                >
-                <input
-                  type="submit"
-                  class="
-                    subscribe__input__field
-                    subscribe__input__field--type--submit
-                    button
-                    button__link__icon
-                    icon
-                    icon--arrow--color--black
-                    button__link__icon--color--red
-                  "
-                  value=" ">
-              </form>
+            <div class="subscribe__wrapper">
+              <h1 class="header-2 subscribe__header">Підписка</h1>
+              <h4 class="header-4 subscribe__header">Бути в курсі всіх актуальних подій та останніх новин.</h4>
+              <div class="subscribe__form">
+                <form onsubmit="this.reset(); return false;" class="subscribe__input">
+                  <input
+                    required
+                    type="email"
+                    class="
+                      subscribe__input__field
+                      subscribe__input__field--type--email
+                    "
+                    placeholder="E-mail"
+                    autocomplete="email"
+                    id="email"
+                  >
+                  <input
+                    type="submit"
+                    class="
+                      subscribe__input__field
+                      subscribe__input__field--type--submit
+                      button
+                      button__link__icon
+                      icon
+                      icon--arrow--color--black
+                      button__link__icon--color--red
+                    "
+                    value=" ">
+                </form>
+              </div>
             </div>
             <div class="subscribe__background"></div>
           </section>
