change menu layot and content max width

--- a/src/index.html
+++ b/src/index.html
@@ -68,77 +68,79 @@
       <!-- #endregion -->
       <!-- #region menu -->
       <aside class="menu page__menu" id="menu">
-        <div class="menu__wrapper">
-          <div class="container">
+        <div class="menu__cover">
+          <div class="menu__wrapper">
+            <div class="container">
             <div class="menu__content">
               <div class="menu__top">
-                <!-- <a href="#" class="icon icon--close"></a> -->
-                <a href="#">
-                  <div class="icon nav-icon">
-                    <span class="nav-icon__line nav-icon__line--order--1"></span>
-                    <span class="nav-icon__line nav-icon__line--order--2"></span>
-                    <span class="nav-icon__line nav-icon__line--order--3"></span>
-                  </div>
-                </a>
-                <nav class="nav">
-                  <ul class="nav__list">
-                    <li class="nav__item">
-                      <a href="#gallery" class="
-                        nav__link
-                        text-normal-semibold
-                        color--white
-                      ">Галерея</a>
+                  <!-- <a href="#" class="icon icon--close"></a> -->
+                  <a href="#">
+                    <div class="icon nav-icon">
+                      <span class="nav-icon__line nav-icon__line--order--1"></span>
+                      <span class="nav-icon__line nav-icon__line--order--2"></span>
+                      <span class="nav-icon__line nav-icon__line--order--3"></span>
+                    </div>
+                  </a>
+                  <nav class="nav">
+                    <ul class="nav__list">
+                      <li class="nav__item">
+                        <a href="#gallery" class="
+                          nav__link
+                          text-normal-semibold
+                          color--white
+                        ">Галерея</a>
+                      </li>
+                      <li class="nav__item">
+                        <a href="#about" class="
+                          nav__link
+                          text-normal-semibold
+                          color--white
+                        ">Про Нас</a>
+                      </li>
+                      <li class="nav__item">
+                        <a href="#events" class="
+                          nav__link
+                          text-normal-semibold
+                          color--white
+                        ">Виставки та<br> події</a>
+                      </li>
+                      <li class="nav__item">
+                        <a href="#contacts" class="
+                          nav__link
+                          text-normal-semibold
+                          color--white
+                        ">Контакти</a>
+                      </li>
+                    </ul>
+                  </nav>
+                </div>
+                <div class="menu__bottom">
+                  <p class="text-normal menu__bottom__item">
+                    Графік роботи
+                  </p>
+                  <ul class="menu__schedule">
+                    <li class="schedule__item text-normal">
+                      <span class="text-normal-bold">12:00 — 20:00</span> середа
                     </li>
-                    <li class="nav__item">
-                      <a href="#about" class="
-                        nav__link
-                        text-normal-semibold
-                        color--white
-                      ">Про Нас</a>
+                    <li class="schedule__item text-normal">
+                      <span class="text-normal-bold">12:00 — 20:00</span> четвер
                     </li>
-                    <li class="nav__item">
-                      <a href="#events" class="
-                        nav__link
-                        text-normal-semibold
-                        color--white
-                      ">Виставки та<br> події</a>
+                    <li class="schedule__item text-normal">
+                      <span class="text-normal-bold">12:00 — 20:00</span> п’ятниця
                     </li>
-                    <li class="nav__item">
-                      <a href="#contacts" class="
-                        nav__link
-                        text-normal-semibold
-                        color--white
-                      ">Контакти</a>
+                    <li class="schedule__item text-normal">
+                      <span class="text-normal-bold">11:00 — 19:00</span> субота
+                    </li>
+                    <li class="schedule__item text-normal">
+                      <span class="text-normal-bold">11:00 — 19:00</span> неділя
                     </li>
                   </ul>
-                </nav>
-              </div>
-              <div class="menu__bottom">
-                <p class="text-normal menu__bottom__item">
-                  Графік роботи
-                </p>
-                <ul class="menu__schedule">
-                  <li class="schedule__item text-normal">
-                    <span class="text-normal-bold">12:00 — 20:00</span> середа
-                  </li>
-                  <li class="schedule__item text-normal">
-                    <span class="text-normal-bold">12:00 — 20:00</span> четвер
-                  </li>
-                  <li class="schedule__item text-normal">
-                    <span class="text-normal-bold">12:00 — 20:00</span> п’ятниця
-                  </li>
-                  <li class="schedule__item text-normal">
-                    <span class="text-normal-bold">11:00 — 19:00</span> субота
-                  </li>
-                  <li class="schedule__item text-normal">
-                    <span class="text-normal-bold">11:00 — 19:00</span> неділя
-                  </li>
-                </ul>
-                <p class="text-normal menu__bottom__vacation">
-                  <span class="text-normal-bold">Вихідні:</span> понеділок, вівторок <br>
-                  Каса припиняє роботу за 1 годину
-                  до закриття музею
-                </p>
+                  <p class="text-normal menu__bottom__vacation">
+                    <span class="text-normal-bold">Вихідні:</span> понеділок, вівторок <br>
+                    Каса припиняє роботу за 1 годину
+                    до закриття музею
+                  </p>
+                </div>
               </div>
             </div>
           </div>
