--- a/src/index.html
+++ b/src/index.html
@@ -434,9 +434,24 @@
               Київ, 01001
             </a>
             <br>
-            тел. +38 (044) 278-13-57
-            факс +38 (044) 278-74-54
-            e-mail: info@namu.kiev.ua
+            <a 
+              class="contacts__link" 
+              href="tel:+38 (044) 278-13-57"
+            >
+              тел. +38 (044) 278-13-57
+            </a>
+            <a
+              class="contacts__link" 
+              href="tel: +38 (044) 278-74-54"
+             >
+              факс +38 (044) 278-74-54
+            </a>
+            <a
+              class="contacts__link" 
+              href="mailto: info@namu.kiev.ua"
+            >
+              e-mail: info@namu.kiev.ua
+            </a>
           </div>
 
           <a href="#" class="up-button footer__up-button"></a>
