--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,295 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+      <div class="header__img">
+        <div class="container header__container">
+          <div class="header__top top">
+            <a href="#menu" class="top__burger"></a>
+            <div class="top__text">
+              <a href="#" class="top__link">NA<br>MU</a>
+            </div>
+          </div>
+          <div class="header__bottom bottom">
+            <div class="header__title"></div>
+            <p class="header__title">ХУДОЖНІЙ<br> МУЗЕЙ</p>
+            <div class="tickets__row tickets__row--green tickets">
+              <div class="tickets__text">КВИТКИ</div>
+              <div class="tickets__link-row">
+                <a href="#" class="tickets__link tickets__link--green">
+                  <img src="images/icons/header-arrow.svg" alt="arrow">
+                </a>
+              </div>
+            </div>
+            <a href="#actions" class="bottom__subtitle subtitle">Події</a>
+          </div>
+        </div>
+      </div>
+    </header>
+    <aside class="aside" id="menu">
+      <div class="container aside__container">
+        <div class="aside__top top">
+          <a  href="#" class="top__close"></a>
+          <div class="aside__grid grid">
+            <a href="#" class="grid__item">Галерея</a>
+            <a href ="#" class="grid__item">Про Нас</a>
+            <a href ="#" class="grid__item">Виставки та<br> події</a>
+            <a href ="#" class="grid__item">Контакти</a>
+          </div>
+        </div>
+        <div class="aside__line line"></div>
+        <div class="aside__bottom bottom">
+          <div class="bottom__title">Графік роботи</div>
+          <div class="aside__row row">
+            <div class="row__item">
+              <div class="item__date">12:00 - 20:00</div>
+              <div class="item__day">середа</div>
+              <div class="item__date">12:00 - 20:00</div>
+              <div class="item__day">четвер</div>
+              <div class="item__date">12:00 - 20:00</div>
+              <div class="item__day">пятниця</div>
+              <div class="item__date">11:00 - 19:00</div>
+              <div class="item__day">субота</div>
+              <div class="item__date">11:00 - 19:00</div>
+              <div class="item__day">неділя</div>
+            </div>
+            <div class="row__text">
+                Вихідні:
+              <span class="item__day"> понеділок, вівторок
+                  Каса припиняє роботу за 1 годину
+                  до закриття музею
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </aside>
+    <main class="main">
+      <section class="actual">
+        <div class="container main__container">
+          <p class="actual__title title" id="actions">Актуальні події</p>
+          <div class="actual__row">
+            <div class="actual__img">
+              <img src="./images/pictures/ydu-i-povertayus.svg" alt="ydu">
+            </div>
+            <div class="actual__info info">
+              <div class="info__row">
+                <div class="info__subtitle subtitle">ВИСТАВКА</div>
+                <div class="info__date subtitle">26.08-29.11.2019</div>
+              </div>
+              <div class="info__row">
+                <a href="#" class="info__title">Йду і повертаюсь</a>
+              </div>
+              <div class="info__row">
+                <div class="info__text subtitle">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="actual__row">
+            <div class="actual__img">
+              <img src="./images/pictures/spogady.svg" alt="spogady">
+            </div>
+            <div class="actual__info info">
+              <div class="info__row">
+                <div class="info__subtitle subtitle">ВИСТАВКА</div>
+                <div class="info__date subtitle">26.08-29.11.2019</div>
+              </div>
+              <div class="info__row">
+                <a href="#" class="info__title">Спогади і мрії</a>
+              </div>
+              <div class="info__row">
+                <div class="info__text subtitle">
+                  Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="lecture">
+        <div class="container lecture__container">
+          <div class="lecture__info">
+            <div class="lecture__row lecture__top">
+              <div class="info__subtitle subtitle">ЛЕКЦІЯ</div>
+              <div class="info__date subtitle">26/08/2019 - 11:00</div>
+            </div>
+            <div class="lecture__row">
+              <div class="info__title info__title--no-pseudo">Від класицизму до романтизму</div>
+            </div>
+          </div>
+        </div>
+        </div>
+      </section>
+
+      <section class="gallery">
+        <div class="container gallery__container">
+          <div class="gallery__title title">Галерея</div>
+          <div class="swiper">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+              <!-- Slides -->
+              <div class="swiper-slide">
+                <img class="swiper-img"
+                 src="images/pictures/gallery-1.svg"
+                  alt="gallery-1">
+              </div>
+              <div class="swiper-slide">
+                <img class="swiper-img"
+                src="images/pictures/gallery-2.svg"
+                alt="gallery-2">
+              </div>
+              <div class="swiper-slide">
+                <img class="swiper-img"
+                 src="images/pictures/gallery-1.svg"
+                  alt="gallery-1">
+              </div>
+              ...
+            </div>
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+
+            <!-- If we need navigation buttons -->
+
+            <!-- If we need scrollbar -->
+          </div>
+          <div class="gallery__grid">
+            <div class="grid__row">
+              <img
+              src="images/pictures/gallery-1280-1.svg"
+               alt="1"
+                class=" grid__img grid__img-1"
+                >
+              <img
+              src="images/pictures/gallery-1280-2.svg"
+                alt="2"
+                class="gird__img grid__img-2"
+                >
+            </div>
+            <div class="grid__row">
+              <img
+              src="images/pictures/gallery-1280-3.svg"
+                alt="1"
+                class="gird__img grid__img-3"
+                >
+              <img
+              src="images/pictures/gallery-1280-4.svg"
+                alt="1"
+                class="gird__img grid__img-4"
+                >
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="subscription">
+        <div class="container subscription__container">
+          <div class="subscription__title title">Підписка</div>
+          <div class="subscription__subtitle subtitle">Бути в курсі всіх актуальних подій та останніх новин.</div>
+          <div class="tickets__row  tickets__row--orange tickets">
+            <input
+            type="mail"
+             required
+              class="tickets__text tickets__input" placeholder="E-mail">
+            </input>
+            <div class="tickets__link-row">
+              <a href="#" class="tickets__link tickets__link--orange">
+                <img src="images/icons/subs-arrow.svg" alt="arrow">
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="container footer__container">
+        <div class="footer__wrap">
+          <div class="footer__wrapper">
+            <div class="footer__top top">
+              <p class="top__text footer__text">NA<br>MU</p>
+              <div class="top__icons">
+                <img
+                src="images/icons/facebook.svg"
+                alt="insta"
+                  class="insta"
+                >
+                <img
+                src="images/icons/insta.svg"
+                alt="fcb"
+                  class="insta"
+                >
+              </div>
+            </div>
+            <div class="bottom__wrapper">
+              <div class="footer__bottom bottom">
+                <div class="bottom__title">Графік роботи</div>
+                <div class="bottom__title">Контакти</div>
+                <div class="footer__row row">
+                  <div class="row__item">
+                    <strong>
+                      <div class="item__date">12:00 - 20:00</div>
+                    </strong>
+                    <div class="item__day">середа</div>
+                    <strong>
+                      <div class="item__date">12:00 - 20:00</div>
+                    </strong>
+                    <div class="item__day">четвер</div>
+                    <strong>
+                      <div class="item__date">12:00 - 20:00</div>
+                    </strong>
+                    <div class="item__day">пятниця</div>
+                    <strong>
+                      <div class="item__date">11:00 - 19:00</div>
+                    </strong>
+                    <div class="item__day">субота</div>
+                    <strong>
+                      <div class="item__date">11:00 - 19:00</div>
+                    </strong>
+                    <div class="item__day">неділя</div>
+                  </div>
+                </div>
+                <div class="item__contacts">
+                  вул. М. Грушевського, 6; Київ, 01001
+                  тел. +38 (044) 278-13-57
+                  факс +38 (044) 278-74-54
+                  e-mail: info@namu.kiev.ua
+                </div>
+                <div class="row__text">
+                  Вихідні:
+                  <span class="item__day"> понеділок, вівторок
+                      Каса припиняє роботу за 1 годину
+                      до закриття музею
+                  </span>
+                </div>
+              </div>
+              <a href="#" class="arrow-up">
+                <img class="arrow"
+                 src="images/icons/arrow-up.svg"
+                  alt="arr"
+                >
+              </a>
+            </div>
+          </div>
+          <div class="footer__line line"></div>
+          <div class="footer__grid grid">
+            <a href="#" class="grid__item">Галерея</a>
+            <a href ="#" class="grid__item">Про Нас</a>
+            <a href ="#" class="grid__item">Виставки та події</a>
+            <a href ="#" class="grid__item">Контакти</a>
+          </div>
+        </div>
+        <div class="footer__copyright">
+          <div class="copyright__subtitle subtitle">Designed by Zhyriada Marina</div>
+          <div class="copyright__subtitle subtitle">Copyright © 2019. All Rights Reserved.</div>
+        </div>
+      </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
