--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>Title</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="icon" type="image/x-icon" href="/images/icons/favicon.png">
   </head>
   <body>
     <header class="header">
@@ -60,9 +61,9 @@
               <div class="item__date">11:00 - 19:00</div>
               <div class="item__day">неділя</div>
             </div>
-            <div class="row__text">
+            <div class="row__text  row__aside-text">
                 Вихідні:
-              <span class="item__day"> понеділок, вівторок
+              <span class="item__day"> понеділок, вівторок <br>
                   Каса припиняє роботу за 1 годину
                   до закриття музею
               </span>
@@ -117,6 +118,7 @@
         </div>
       </section>
       <section class="lecture">
+        <div class="lecture__img"> </div>
         <div class="container lecture__container">
           <div class="lecture__info">
             <div class="lecture__row lecture__top">
@@ -128,7 +130,7 @@
             </div>
           </div>
         </div>
-        </div>
+      </div>
       </section>
 
       <section class="gallery">
@@ -216,16 +218,12 @@
             <div class="footer__top top">
               <p class="top__text footer__text">NA<br>MU</p>
               <div class="top__icons">
-                <img
-                src="images/icons/facebook.svg"
-                alt="insta"
-                  class="insta"
-                >
-                <img
-                src="images/icons/insta.svg"
-                alt="fcb"
-                  class="insta"
-                >
+                <a href="#" class="fa-brands fa-instagram">
+
+                </a>
+                <a href="#" class="fa-brands fa-facebook">
+
+                </a>
               </div>
             </div>
             <div class="bottom__wrapper">
@@ -257,16 +255,17 @@
                   </div>
                 </div>
                 <div class="item__contacts">
-                  вул. М. Грушевського, 6; Київ, 01001
-                  тел. +38 (044) 278-13-57
-                  факс +38 (044) 278-74-54
-                  e-mail: info@namu.kiev.ua
+                  <a class="contacts__link" href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4494397,30.5307593,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce524453048d:0x49a2895b6cb43e10!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F1tj901fm?entry=ttu"> вул. М. Грушевського, 6; Київ, 01001</p>
+                  <a class="contacts__link" href="tel:0442781357">тел. +38 (044) 278-13-57</a> <br>
+                  <a class="contacts__link" href="tel:0442781357">факс +38 (044) 278-74-54</a> <br>
+                  <a class="contacts__link" href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
+
                 </div>
-                <div class="row__text">
+                <div class="row__text row__footer-text">
                   Вихідні:
-                  <span class="item__day"> понеділок, вівторок
-                      Каса припиняє роботу за 1 годину
-                      до закриття музею
+                  <span class="item__day"> понеділок, вівторок<br>
+                    Каса припиняє роботу за 1 годину <br>
+                    до закриття музею
                   </span>
                 </div>
               </div>
@@ -293,6 +292,7 @@
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+    <script src="https://kit.fontawesome.com/c5ad1b39bd.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
