--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>National Museum</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="icon" type="image/x-icon" href="/images/icons/favicon.png">
@@ -21,14 +21,14 @@
           <div class="header__bottom bottom">
             <div class="header__title"></div>
             <p class="header__title">ХУДОЖНІЙ<br> МУЗЕЙ</p>
-            <div class="tickets__row tickets__row--green tickets">
+            <a href="#" class="tickets__row tickets__row--green tickets">
               <div class="tickets__text">КВИТКИ</div>
               <div class="tickets__link-row">
-                <a href="#" class="tickets__link tickets__link--green">
+                <div class="tickets__link tickets__link--green">
                   <img src="images/icons/header-arrow.svg" alt="arrow">
-                </a>
+                </div>
               </div>
-            </div>
+            </a>
             <a href="#actions" class="bottom__subtitle subtitle">Події</a>
           </div>
         </div>
@@ -196,18 +196,18 @@
         <div class="container subscription__container">
           <div class="subscription__title title">Підписка</div>
           <div class="subscription__subtitle subtitle">Бути в курсі всіх актуальних подій та останніх новин.</div>
+          <form class="form" action="">
           <div class="tickets__row  tickets__row--orange tickets">
-            <input
-            type="mail"
-             required
-              class="tickets__text tickets__input" placeholder="E-mail">
-            </input>
-            <div class="tickets__link-row">
-              <a href="#" class="tickets__link tickets__link--orange">
-                <img src="images/icons/subs-arrow.svg" alt="arrow">
-              </a>
-            </div>
+
+              <input
+              type="email"
+              class="tickets__text tickets__input" placeholder="E-mail" required>
+              </input>
+              <button type="reset" class="tickets__link-row form__button tickets__link--orange">
+                  <img src="images/icons/subs-arrow.svg" alt="arrow">
+              </button>
           </div>
+        </form>
         </div>
       </section>
     </main>
@@ -255,7 +255,7 @@
                   </div>
                 </div>
                 <div class="item__contacts">
-                  <a class="contacts__link" href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4494397,30.5307593,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce524453048d:0x49a2895b6cb43e10!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F1tj901fm?entry=ttu"> вул. М. Грушевського, 6; Київ, 01001</p>
+                  <a class="contacts__link" href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4494397,30.5307593,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce524453048d:0x49a2895b6cb43e10!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F1tj901fm?entry=ttu" target="_blank"> вул. М. Грушевського, 6; Київ, 01001</p>
                   <a class="contacts__link" href="tel:0442781357">тел. +38 (044) 278-13-57</a> <br>
                   <a class="contacts__link" href="tel:0442781357">факс +38 (044) 278-74-54</a> <br>
                   <a class="contacts__link" href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
