--- a/src/index.html
+++ b/src/index.html
@@ -196,14 +196,14 @@
         <div class="container subscription__container">
           <div class="subscription__title title">Підписка</div>
           <div class="subscription__subtitle subtitle">Бути в курсі всіх актуальних подій та останніх новин.</div>
-          <form class="form" action="">
+          <form class="form" id="form" action="">
           <div class="tickets__row  tickets__row--orange tickets">
 
               <input
               type="email"
               class="tickets__text tickets__input" placeholder="E-mail" required>
               </input>
-              <button type="reset" class="tickets__link-row form__button tickets__link--orange">
+              <button type="submit" class="tickets__link-row form__button tickets__link--orange">
                   <img src="images/icons/subs-arrow.svg" alt="arrow">
               </button>
           </div>
