--- a/src/index.html
+++ b/src/index.html
@@ -218,10 +218,10 @@
             <div class="footer__top top">
               <p class="top__text footer__text">NA<br>MU</p>
               <div class="top__icons">
-                <a href="#" class="fa-brands fa-instagram">
+                <a href="https://www.instagram.com/" class="fa-brands fa-instagram">
 
                 </a>
-                <a href="#" class="fa-brands fa-facebook">
+                <a href="https://www.facebook.com/" class="fa-brands fa-facebook">
 
                 </a>
               </div>
@@ -255,10 +255,14 @@
                   </div>
                 </div>
                 <div class="item__contacts">
-                  <a class="contacts__link" href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4494397,30.5307593,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce524453048d:0x49a2895b6cb43e10!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F1tj901fm?entry=ttu" target="_blank"> вул. М. Грушевського, 6; Київ, 01001</p>
-                  <a class="contacts__link" href="tel:0442781357">тел. +38 (044) 278-13-57</a> <br>
-                  <a class="contacts__link" href="tel:0442781357">факс +38 (044) 278-74-54</a> <br>
-                  <a class="contacts__link" href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
+                  <div>
+                    <a class="contacts__link"
+                    href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4494397,30.5307593,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce524453048d:0x49a2895b6cb43e10!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F1tj901fm?entry=ttu" target="_blank"> вул. М. Грушевського, 6; Київ, 01001
+                    </a>
+                  </div>
+                  <div><a class="contacts__link" href="tel:0442781357">тел. +38 (044) 278-13-57</a> <br></div>
+                  <div><a class="contacts__link" href="tel:0442781357">факс +38 (044) 278-74-54</a> <br></div>
+                  <div><a class="contacts__link" href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a></div>
 
                 </div>
                 <div class="row__text row__footer-text">
