fix menu on scrolling

--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,13 @@
     <title>National Museum</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
     <link rel="stylesheet" href="./styles/main.scss">
-    <link rel="icon" type="image/x-icon" href="/images/icons/favicon.png">
+    <link
+    rel="icon"
+     type="image/x-icon"
+      href="/images/icons/favicon.png"
+    >
   </head>
-  <body>
+  <body class="body">
     <header class="header">
       <div class="header__img">
         <div class="container header__container">
@@ -39,10 +43,10 @@
         <div class="aside__top top">
           <a  href="#" class="top__close"></a>
           <div class="aside__grid grid">
-            <a href="#" class="grid__item">Галерея</a>
-            <a href ="#" class="grid__item">Про Нас</a>
-            <a href ="#" class="grid__item">Виставки та<br> події</a>
-            <a href ="#" class="grid__item">Контакти</a>
+            <a href="#gallery" class="grid__item item-gallery">Галерея</a>
+            <a href ="#about" class="grid__item item-about">Про Нас</a>
+            <a href ="#contacts" class="grid__item item-events">Виставки та<br> події</a>
+            <a href ="#contacts" class="grid__item item-contacts">Контакти</a>
           </div>
         </div>
         <div class="aside__line line"></div>
@@ -61,7 +65,7 @@
               <div class="item__date">11:00 - 19:00</div>
               <div class="item__day">неділя</div>
             </div>
-            <div class="row__text  row__aside-text">
+            <div class="row__text  row__footer-text">
                 Вихідні:
               <span class="item__day"> понеділок, вівторок <br>
                   Каса припиняє роботу за 1 годину
@@ -73,7 +77,7 @@
       </div>
     </aside>
     <main class="main">
-      <section class="actual">
+      <section class="actual" id="events">
         <div class="container main__container">
           <p class="actual__title title" id="actions">Актуальні події</p>
           <div class="actual__row">
@@ -133,7 +137,7 @@
       </div>
       </section>
 
-      <section class="gallery">
+      <section class="gallery" id="gallery">
         <div class="container gallery__container">
           <div class="gallery__title title">Галерея</div>
           <div class="swiper">
@@ -196,11 +200,17 @@
         <div class="container subscription__container">
           <div class="subscription__title title">Підписка</div>
           <div class="subscription__subtitle subtitle">Бути в курсі всіх актуальних подій та останніх новин.</div>
-          <form class="form" id="form" action="">
+          <form
+          class="form"
+           id="form"
+           action="URL">
             <div class="tickets__row  tickets__row--orange tickets">
               <input
               type="email"
-              class="tickets__text tickets__input" placeholder="E-mail" required>
+              class="tickets__text tickets__input"
+              placeholder="E-mail"
+              required
+              >
               </input>
               <button type="submit" class="tickets__link-row form__button tickets__link--orange">
                 <img src="images/icons/subs-arrow.svg" alt="arrow">
@@ -210,7 +220,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
+    <footer class="footer" id="contacts">
       <div class="container footer__container">
         <div class="footer__wrap">
           <div class="footer__wrapper">
