--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,114 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <title>Museum</title>
+    <link
+      rel="shortcut icon"
+      href="./images/icons/icon-page-logo.jpg"
+      type="image/x-icon"
+    >
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/style.scss">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <header class="header">
+      <div class="container">
+
+      </div>
+    </header>
+
+    <aside class="modal">
+      <div class="modal__outer">
+        <div class="container">
+          <div class="modal__wrapper">
+            <div class="modal__top">
+              <div class="modal__close">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                >
+                  <g clip-path="url(#clip0_24982_574)">
+                    <path d="M12 10.586L16.95 5.63599L18.364 7.04999L13.414 12L18.364 16.95L16.95 18.364L12 13.414L7.04999 18.364L5.63599 16.95L10.586 12L5.63599 7.04999L7.04999 5.63599L12 10.586Z" fill="white">
+                  </g>
+                  <defs>
+                    <clippath>
+                      <rect
+                        width="24"
+                        height="24"
+                        fill="white">
+                    </clippath>
+                  </defs>
+                </svg>
+              </div>
+              <nav class="nav">
+                <ul class="nav__list">
+                  <div class="nav__wrap">
+                    <li class="nav__link">
+                      <a href="#" class="nav__item">
+                        Галерея
+                      </a>
+                    </li>
+                    <li class="nav__link">
+                      <a href="#" class="nav__item">
+                        Про Нас
+                      </a>
+                    </li>
+                    <li class="nav__link">
+                      <a href="#" class="nav__item">
+                        Виставки та події
+                      </a>
+                    </li>
+                    <li class="nav__link">
+                      <a href="#" class="nav__item">
+                        Контакти
+                      </a>
+                    </li>
+                  </div>
+                </ul>
+              </nav>
+            </div>
+
+            <div class="modal__bottom">
+              <h1 class="modal__bottom--header">Графік роботи</h1>
+
+              <div class="modal__bottom--schedule-wraper">
+                <ul class="modal__bottom--schedule--list">
+                  <li class="modal__bottom--schedule--time">
+                    <strong>12:00 — 20:00</strong> середа
+                  </li>
+                  <li class="modal__bottom--schedule--time">
+                    <strong>12:00 — 20:00</strong> четвер
+                  </li>
+                  <li class="modal__bottom--schedule--time">
+                    <strong>12:00 — 20:00</strong> п’ятниця
+                  </li>
+                  <li class="modal__bottom--schedule--time">
+                    <strong>11:00 — 19:00</strong> субота
+                  </li>
+                  <li class="modal__bottom--schedule--time">
+                    <strong>11:00 — 19:00</strong> неділя
+                  </li>
+                </ul>
+
+                <p class="modal__bottom--schedule--weekend">
+                  <strong>Вихідні:</strong> понеділок, вівторок
+                  <br>
+                  Каса припиняє роботу за 1 годину до закриття музею
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </aside>
+
+    <main class="main"></main>
+
+    <footer class="footer"></footer>
+
+    <!-- <script type="text/javascript" src="scripts/main.js"></script> -->
   </body>
 </html>
