--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,17 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   
     <title>NAMU</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
+    <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
+/>
+
+<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+
+<script defer type="text/javascript" src="scripts/main.js"></script>
+
     <link
       rel="shortcut icon"
       href="images/NAMU.png"
@@ -33,7 +42,7 @@
 
   <body class="page__body">
 
-    <script type="text/javascript" src="scripts/main.js"></script>
+    
 
     <header class="header">
      
