add adaptive height to menu

--- a/src/index.html
+++ b/src/index.html
@@ -212,7 +212,11 @@
               required
               >
               </input>
-              <button type="submit" class="tickets__link-row form__button tickets__link--orange">
+              <button type="submit"
+               class="tickets__link-row form__button
+                tickets__link--orange"
+                target="_blank"
+              >
                 <img src="images/icons/subs-arrow.svg" alt="arrow">
               </button>
             </div>
@@ -227,10 +231,10 @@
             <div class="footer__top top">
               <p class="top__text footer__text">NA<br>MU</p>
               <div class="top__icons">
-                <a href="https://www.instagram.com/" class="fa-brands fa-instagram">
+                <a target="_blank" href="https://www.instagram.com/" class="fa-brands fa-instagram">
 
                 </a>
-                <a href="https://www.facebook.com/" class="fa-brands fa-facebook">
+                <a target="_blank" href="https://www.facebook.com/" class="fa-brands fa-facebook">
 
                 </a>
               </div>
