reset input content on click

--- a/src/index.html
+++ b/src/index.html
@@ -201,9 +201,10 @@
           <div class="subscription__title title">Підписка</div>
           <div class="subscription__subtitle subtitle">Бути в курсі всіх актуальних подій та останніх новин.</div>
           <form
+          onsubmit="this.reset(); return false;"
           class="form"
            id="form"
-           action="URL">
+          >
             <div class="tickets__row  tickets__row--orange tickets">
               <input
               type="email"
