--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,210 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="icon" href="./images/icons/NAMU.svg">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+
+  <body class="page__body">
+    <header class="header" id="header">
+      <div class="header__back">
+        <div class="header__container">
+          <div class="top-bar top-bar__header">
+            <a href="#menu" class="top-bar__icon top-bar__icon-main"></a>
+
+            <a href="#" >
+              <img
+                class="top-bar__logo"
+                src="./images/icons/NAMU.svg"
+                alt="NAMU"
+              >
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="museum">
+        <div class="museum__container">
+          <div class="top-bar top-bar__museum">
+            <a href="#menu" class="top-bar__icon top-bar__icon-main-museum"></a>
+          </div>
+          <h1 class="title">ХУДОЖНІЙ МУЗЕЙ</h1>
+
+          <div class="museum__button">
+            <a class="museum__link-button" href="#">КВИТКИ</a>
+
+            <a class="museum__arrow-button" href="#"></a>
+          </div>
+
+          <div class="museum__events">ПОДІЇ</div>
+        </div>
+
+      </div>
+    </header>
+
+    <aside class="menu" id="menu">
+      <div class="menu__section">
+        <div class="container">
+          <div class="menu__content">
+            <div class="menu__icon">
+              <a href="#aside" class="menu__icon-cross-menu"></a>
+            </div>
+            <div class="top-bar top-bar__aside">
+              <a href="#aside" class="top-bar__icon top-bar__aside-icon"></a>
+
+              <div class="top-bar__row1">
+                <div class="top-bar__text">
+                  <a href="#galery" class="top-bar__text-link">Галерея</a>
+                </div>
+                <div class="top-bar__text">
+                  <a href="#events" class="top-bar__text-link">Виставки та <br> події</a>
+                </div>
+              </div>
+              <div class="top-bar__row2">
+                <div class="top-bar__text">
+                  <a href="#about-us" class="top-bar__text-link">Про Нас</a>
+                </div>
+                <div class="top-bar__text">
+                  <a href="#contacts" class="top-bar__text-link">Контакти</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="menu__line"></div>
+
+            <div class="menu__shedule">
+              <div class="menu__subtitle">Графік роботи</div>
+
+              <div class="menu__shedule-day">
+                <div class="menu__text">
+                  <span class="menu__time">12:00 — 20:00 </span> середа <br> <span class="menu__time">12:00 — 20:00</span> четвер <br> <span class="menu__time">12:00 — 20:00</span> п’ятниця <br> <span class="menu__time">11:00 — 19:00</span> субота <br> <span class="menu__time">11:00 — 19:00</span> неділя
+                </div>
+
+                <div class="menu__weekend">
+                  <span class="menu__time">Вихідні:</span> понеділок, вівторок <br>Каса припиняє роботу за 1 годину до закриття музею
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="menu__fond"></div>
+    </aside>
+
+    <main class="page__main">
+      <section class="events" id="events">
+        <div class="container">
+          <h2 class="events__title subtitle">Актуальні події</h2>
+
+          <div class="events__card">
+            <picture>
+              <source
+                media="(min-width: 1280px)"
+                srcset="images/events/1-desctop.jpg"
+              >
+
+              <source
+                media="(min-width: 640px)"
+                srcset="images/events/1-tablet.jpg"
+              >
+
+              <img
+                class="events__image"
+                src="images/events/1-mobile.jpg"
+                alt="field"
+              >
+            </picture>
+
+            <div class="events__body">
+              <div class="events__inf">
+                <div class="events__type">ВИСТАВКА</div>
+                <div class="events__date">26.08-29.11.2019</div>
+              </div>
+
+              <h3 class="events__subtitle">Йду і повертаюсь</h3>
+              <div class="events__text">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</div>
+            </div>
+          </div>
+
+          <div class="events__card">
+            <picture>
+              <source
+                media="(min-width: 1280px)"
+                srcset="images/events/2-desctop.jpg"
+              >
+
+              <source
+                media="(min-width: 640px)"
+                srcset="images/events/2-tablet.jpg"
+              >
+
+              <img
+                class="events__image"
+                src="images/events/2-mobile.jpg"
+                alt="girl"
+              >
+            </picture>
+
+            <div class="events__body">
+              <div class="events__inf">
+                <div class="events__type">ВИСТАВКА</div>
+                <div class="events__date">26.08-29.11.2019</div>
+              </div>
+
+              <h3 class="events__subtitle">І спогади і мрії</h3>
+              <div class="events__text">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</div>
+            </div>
+          </div>
+        </div>
+
+        <div class="events__card-last">
+          <div class="events__image-last"></div>
+
+          <div class="events__card-inf">
+            <div class="events__inf events__inf-last">
+              <div class="events__type">ЛЕКЦІЯ</div>
+              <div class="events__date">26/08/2019 - 11:00</div>
+            </div>
+
+            <h3 class="events__subtitle events__subtitle-last">Від класицизму до <br>романтизму</h3>
+          </div>
+        </div>
+      </section>
+
+      <section class="galery" id="galery">
+        <div class="container">
+          <h2 class="galery__title subtitle">Галерея</h2>
+        </div>
+
+        <div class="galery__slaider slaider">
+          <div class="slaider__item">
+            <img src="./images/galery/1-mobile.jpg" alt="girl">
+          </div>
+          <div class="slaider__item">
+            <img src="./images/galery/1-mobile.jpg" alt="girl">
+          </div>
+          <div class="slaider__item">
+            <img src="./images/galery/1-mobile.jpg" alt="girl">
+          </div>
+          <div class="slaider__item">
+            <img src="./images/galery/1-mobile.jpg" alt="girl">
+          </div>
+          <div class="slaider__item">
+            <img src="./images/galery/1-mobile.jpg" alt="girl">
+          </div>
+          <div class="slaider__item">
+            <img src="./images/galery/1-mobile.jpg" alt="girl">
+          </div>
+        </div>
+      </section>
+    </main>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
