fix menu display when height <=500px again

--- a/src/index.html
+++ b/src/index.html
@@ -245,7 +245,7 @@
                 <div class="bottom__title">Графік роботи</div>
                 <div class="bottom__title">Контакти</div>
                 <div class="footer__row row">
-                  <div class="row__item">
+                  <div class="row__item row__item--footer">
                     <strong>
                       <div class="item__date">12:00 - 20:00</div>
                     </strong>
