fix menu on 1280px

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,6 @@
             </div>
           </div>
           <div class="header__bottom bottom">
-            <div class="header__title"></div>
             <p class="header__title">ХУДОЖНІЙ<br> МУЗЕЙ</p>
             <a href="#" class="tickets__row tickets__row--green tickets">
               <div class="tickets__text">КВИТКИ</div>
@@ -65,7 +64,7 @@
               <div class="item__date">11:00 - 19:00</div>
               <div class="item__day">неділя</div>
             </div>
-            <div class="row__text  row__footer-text">
+            <div class="row__text  row__aside-text">
                 Вихідні:
               <span class="item__day"> понеділок, вівторок <br>
                   Каса припиняє роботу за 1 годину
