--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,125 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>НАМУ</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="icon" href="./images/header/na-mu-logo.svg">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header">
+      <div class="header__content">
+        <div class="header__left">
+          <a href="#menu">
+            <img
+              src="./images/header/icons/menu_icon.svg"
+              alt="menu_icon"
+              class="header__menu"
+            >
+          </a>
+
+          <h1 class="header__title">Художній <br> музей</h1>
+          <div class="header__button">
+            <a class="header__button-text" href="#">Квитки</a>
+            <a class="header__button-arrow">
+              <img
+                src="./images/header/icons/header_arrow_right.svg"
+                alt="button_arrow"
+                class="header__icon"
+              >
+            </a>
+          </div>
+
+          <div class="header__side-nav">
+            <a class="header__side-nav--title h6-title" href="#">Події</a>
+            <div class="header__side-nav--line"></div>
+          </div>
+        </div>
+
+        <div class="header__right">
+          <div class="banner">
+            <div class="banner__image"></div>
+            <a href="#">
+              <img
+                src="./images/header/na-mu-logo.svg"
+                alt="na-mu-logo"
+                class="banner__logo"
+              >
+            </a>
+          </div>
+        </div>
+      </div>
+
+    </header>
+
+    <aside class="menu page__menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__top">
+            <a href="#" >
+              <img
+                src="./images/header/icons/menu_close_icon.svg"
+                alt="menu-close-icon"
+                class="menu__icon"
+              >
+            </a>
+            <div class="menu__nav">
+              <nav class="nav">
+                <ul class="nav__list">
+                  <li class="nav__item">
+                    <a class="nav__link" href="#">Галерея</a>
+                  </li>
+                  <li class="nav__item">
+                    <a class="nav__link" href="#">Виставки та події</a>
+                  </li>
+                </ul>
+              </nav>
+              <nav class="nav nav--right">
+                <ul class="nav__list">
+                  <li class="nav__item">
+                    <a class="nav__link" href="#">Про нас</a>
+                  </li>
+                  <li class="nav__item">
+                    <a class="nav__link" href="#">Контакти</a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+
+          <div class="menu__separator"></div>
+          <div class="menu__bottom">
+            <p class="menu__text">Графік роботи</p>
+            <div class="menu__schedule">
+              <div class="menu__schedule--work-hours">
+                <p class="menu__text">
+                  <span class="menu__text-bold">12:00 — 20:00</span> середа
+                  <br><span class="menu__text-bold">12:00 — 20:00</span> четвер
+                  <br><span class="menu__text-bold">12:00 — 20:00</span> п’ятниця
+                  <br><span class="menu__text-bold">11:00 — 19:00</span> субота
+                  <br><span class="menu__text-bold">11:00 — 19:00</span> неділя
+                </p>
+              </div>
+              <div class="menu__schedule--day-off">
+                <p class="menu__text">
+                  <span class="menu__text-bold">Вихідні:</span> понеділок, вівторок
+                  <br>Каса припиняє роботу за 1 годину до закриття музею
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </aside>
+
+    <main></main>
+
+    <footer></footer>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
